test/files/parser/errors/assign-string.organic
// Assign to string
// 4 ~ 1 ~ Expected variable name, received ""test"".

"test" = 0
